// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/go/releases-goproxy getReleases fetches release data from goproxy 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.0.info",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.1.info",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases handles comma fallback 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "foo.example.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://foo.example.com/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "bar.example.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://bar.example.com/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.0.info",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.1.info",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases handles pipe fallback 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "example.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://example.com/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.0.info",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.1.info",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases handles timestamp fetch errors 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/list",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.0.info",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/google/btree/@v/v1.0.1.info",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases short-circuits for errors other than 404 or 410 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "foo.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://foo.com/github.com/foo/bar/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "bar.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://bar.com/github.com/foo/bar/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "baz.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://baz.com/github.com/foo/bar/@v/list",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases skips GONOPROXY and GOPRIVATE packages 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/google/btree/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/google/btree/releases?per_page=100",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases supports "direct" keyword 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "foo.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://foo.com/github.com/foo/bar/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "bar.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://bar.com/github.com/foo/bar/@v/list",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/foo/bar/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/foo/bar/releases?per_page=100",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy getReleases supports "off" keyword 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "foo.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://foo.com/github.com/foo/bar/@v/list",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "bar.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://bar.com/github.com/foo/bar/@v/list",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy requests listVersions 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/go-kit/kit/@v/list",
  },
]
`;

exports[`modules/datasource/go/releases-goproxy requests versionInfo 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "proxy.golang.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://proxy.golang.org/github.com/go-kit/kit/@v/v0.5.0.info",
  },
]
`;
